--- a/app/package.json
+++ b/app/package.json
@@ -14,7 +14,8 @@
     "d3": "^5.15.0",
     "in-view": "^0.6.1",
     "rollup-plugin-browsersync": "^1.1.0",
-    "typed.js": "^2.0.11"
+    "typed.js": "^2.0.11",
+    "waypoints": "^4.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
