--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "MIT",
   "dependencies": {
     "d3": "^5.12.0",
-    "in-view": "^0.6.1"
+    "in-view": "^0.6.1",
+    "waypoints": "^4.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
